Set user level environment variable

--- a/SeleniumAutomationStarter/SeleniumAutomationStarter/SeleniumAutomationStarter.csproj
+++ b/SeleniumAutomationStarter/SeleniumAutomationStarter/SeleniumAutomationStarter.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Selenium.WebDriver" Version="3.13.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="url.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
